[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "mysten-service"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
axum.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
serde.workspace = true
simple-server-timing-header.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
