[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Crate for memory reporting"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "mysten-util-mem-derive"
publish = false
repository = "https://github.com/mystenlabs/mysten-infra"
rust-version = "1.56.1"
version = "0.1.0"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
synstructure.workspace = true
