[package]
authors = [
  "Andrew Schran <aschran@mystenlabs.com>",
  "Parity Technologies <admin@parity.io>",
]
description = "Collection of memory related utilities"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "mysten-util-mem"
publish = false
repository = "https://github.com/mystenlabs/mysten-infra"
rust-version = "1.56.1"
version = "0.11.0"

[dependencies]
cfg-if.workspace = true
ed25519-consensus.workspace = true
fastcrypto = { workspace = true }
fastcrypto-tbls.workspace = true
hashbrown = { workspace = true, optional = true }
impl-trait-for-tuples.workspace = true
indexmap.workspace = true
mysten-util-mem-derive.workspace = true
roaring.workspace = true

once_cell.workspace = true
parking_lot = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }

[features]
default = ["estimate-heapsize", "hashbrown", "smallvec", "std"]
std = ["parking_lot"]
# Full estimate: no call to allocator
estimate-heapsize = []
