[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-archival"
publish = false
version.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
indicatif.workspace = true
num_enum.workspace = true
object_store.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = "1.0.95"
sui-config.workspace = true
sui-storage.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
ed25519-consensus.workspace = true
fastcrypto = { workspace = true }
more-asserts.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-package.workspace = true
sui-macros.workspace = true
sui-swarm-config.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true
