[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-aws-orchestrator"
publish = false
version = "0.0.1"

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
aws-smithy-http.workspace = true
aws-smithy-runtime-api.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
eyre.workspace = true
futures.workspace = true
prettytable-rs.workspace = true
prometheus-parse.workspace = true
reqwest.workspace = true
russh.workspace = true
russh-keys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

mysten-metrics.workspace = true
narwhal-config.workspace = true
sui-config = { path = "../sui-config" }
sui-swarm-config = { path = "../sui-swarm-config" }
sui-types = { path = "../sui-types" }

[dev-dependencies]
tempfile = "3.6.0"

[[bin]]
name = "sui-aws-orchestrator"
path = "src/main.rs"
