[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-benchmark"
publish = false
version = "0.0.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
comfy-table.workspace = true
duration-str.workspace = true
fastcrypto-zkp.workspace = true
futures.workspace = true
hdrhistogram.workspace = true
indicatif.workspace = true
itertools.workspace = true
prometheus.workspace = true
rand.workspace = true
regex.workspace = true
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
sui-config.workspace = true
sui-core.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-network.workspace = true
sui-protocol-config.workspace = true
sui-sdk.workspace = true
sui-storage.workspace = true
sui-surfer.workspace = true
sui-swarm-config.workspace = true
sui-test-transaction-builder.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true

move-core-types.workspace = true
mysten-metrics.workspace = true
sysinfo.workspace = true
test-cluster.workspace = true

[target.'cfg(msim)'.dependencies]
sui-framework.workspace = true
sui-framework-snapshot.workspace = true
sui-macros.workspace = true
sui-simulator.workspace = true
typed-store.workspace = true
