[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-bridge-cli"
publish = false
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ethers = "2.0"
fastcrypto.workspace = true
futures.workspace = true
move-core-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
shared-crypto.workspace = true
sui-bridge.workspace = true
sui-config.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true
tracing.workspace = true
