[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-bridge-indexer"
publish = false
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
bin-version.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
futures.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
rayon = "1.10.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum_macros.workspace = true
sui-bridge.workspace = true
sui-bridge-watchdog.workspace = true
sui-config.workspace = true
sui-data-ingestion-core.workspace = true
sui-indexer-builder.workspace = true
sui-json-rpc-types.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
hex-literal = "0.3.4"
sui-test-transaction-builder.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
test-cluster.workspace = true

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
