[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-cluster-test"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
clap.workspace = true
derivative.workspace = true
fastcrypto.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shared-crypto.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

sui-config.workspace = true
sui-core.workspace = true
sui-faucet.workspace = true
sui-graphql-rpc.workspace = true
sui-indexer.workspace = true
sui-json.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
sui-swarm.workspace = true
sui-swarm-config.workspace = true
sui-test-transaction-builder.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true

move-core-types.workspace = true
test-cluster.workspace = true
