[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-config"
publish = false
version = "0.0.0"

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
clap.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
object_store.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

consensus-config.workspace = true
move-vm-config.workspace = true
narwhal-config.workspace = true
sui-keys.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true

[dev-dependencies]
insta.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
