[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-core"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
consensus-config.workspace = true
consensus-core.workspace = true
count-min-sketch.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
lru.workspace = true
mockall.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
roaring.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "test-util", "tracing"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
twox-hash.workspace = true

anemo.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

mysten-metrics.workspace = true
narwhal-types.workspace = true
nonempty.workspace = true
shared-crypto.workspace = true
sui-archival.workspace = true
sui-authority-aggregation.workspace = true
sui-config.workspace = true
sui-execution = { path = "../../sui-execution" }
sui-framework.workspace = true
sui-genesis-builder.workspace = true
sui-json-rpc-types.workspace = true
sui-macros.workspace = true
sui-move-build.workspace = true
sui-network.workspace = true
sui-protocol-config.workspace = true
sui-simulator.workspace = true
sui-storage.workspace = true
sui-swarm-config.workspace = true
sui-transaction-checks.workspace = true
sui-types.workspace = true
zeroize.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
num-bigint = "0.4.4"
pretty_assertions.workspace = true
rstest.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true

move-symbol-pool.workspace = true

sui-move.workspace = true
sui-test-transaction-builder.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

sui-macros.workspace = true
sui-protocol-config.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { workspace = true, default-features = false, features = [
  "atomic64",
  "sync",
] }
[target.'cfg(not(msim))'.dependencies]
moka = { workspace = true, features = ["sync"] }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
harness = false
name = "verified_cert_cache_bench"

[[bench]]
harness = false
name = "batch_verification_bench"

[features]
test-utils = []
