[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-cost"
publish = false
version = "0.1.0"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
sui-types.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
insta.workspace = true
move-cli.workspace = true
move-disassembler.workspace = true
sui-config.workspace = true
sui-json-rpc-types.workspace = true
sui-move-build.workspace = true
sui-swarm-config.workspace = true
sui-test-transaction-builder.workspace = true
test-cluster.workspace = true
