[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-data-ingestion-core"
publish = false
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
futures.workspace = true
mysten-metrics.workspace = true
notify.workspace = true
object_store.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-protocol-config.workspace = true
sui-rest-api.workspace = true
sui-storage.workspace = true
sui-types.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rand.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
