[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-e2e-tests"
publish = false
version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
anyhow.workspace = true
assert_cmd.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
futures.workspace = true
indexmap.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
test-cluster.workspace = true
tokio.workspace = true
tracing.workspace = true

fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-package.workspace = true
telemetry-subscribers.workspace = true

mysten-metrics.workspace = true
shared-crypto.workspace = true
sui.workspace = true
sui-bridge.workspace = true
sui-config.workspace = true
sui-core.workspace = true
sui-framework.workspace = true
sui-json-rpc.workspace = true
sui-json-rpc-api.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-macros.workspace = true
sui-move-build.workspace = true
sui-network.workspace = true
sui-node.workspace = true
sui-protocol-config.workspace = true
sui-rest-api.workspace = true
sui-sdk.workspace = true
sui-simulator.workspace = true
sui-storage.workspace = true
sui-swarm.workspace = true
sui-swarm-config.workspace = true
sui-test-transaction-builder.workspace = true
sui-tool.workspace = true
sui-types.workspace = true

coset.workspace = true
p256.workspace = true
passkey-authenticator.workspace = true
passkey-client.workspace = true
passkey-types.workspace = true
url.workspace = true
