[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-faucet"
publish = false
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
scopeguard.workspace = true
serde.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
ttl_cache.workspace = true
uuid.workspace = true

async-recursion.workspace = true
mysten-metrics.workspace = true
shared-crypto.workspace = true
sui-config.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

[dev-dependencies]
test-cluster.workspace = true

[[bin]]
name = "sui-faucet"
path = "src/main.rs"
