[package]
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Tool to create a bytecode snapshot of the current sui-framework"
edition = "2021"
license = "Apache-2.0"
name = "sui-framework-snapshot"
publish = false
version.workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
bin-version.workspace = true
serde.workspace = true
serde_json.workspace = true

sui-framework.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
