[package]
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Runs Move tests for sui-framework"
edition = "2021"
license = "Apache-2.0"
name = "sui-framework-tests"
publish = false
version = "0.1.0"

[lints]
workspace = true

[[test]]
harness = false
name = "move_tests"

[dev-dependencies]
datatest-stable.workspace = true
prometheus.workspace = true

sui-framework.workspace = true
sui-move = { workspace = true, features = ["unit_test"] }
sui-move-build.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true

move-bytecode-verifier = { path = "../../external-crates/move/crates/move-bytecode-verifier" }
sui-adapter = { path = "../../sui-execution/latest/sui-adapter", package = "sui-adapter-latest" }
sui-verifier = { path = "../../sui-execution/latest/sui-verifier", package = "sui-verifier-latest" }

move-bytecode-verifier-meter.workspace = true
move-cli.workspace = true
move-package.workspace = true
move-unit-test.workspace = true
sui-config.workspace = true

[dependencies]
