[package]
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Move framework for sui platform"
edition = "2021"
license = "Apache-2.0"
name = "sui-framework"
publish = false
version = "0.1.0"

[dependencies]
bcs.workspace = true
once_cell.workspace = true
serde.workspace = true
tracing.workspace = true

sui-types.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true

[dev-dependencies]
anyhow.workspace = true
bcs.workspace = true
regex.workspace = true
tempfile.workspace = true

move-binary-format.workspace = true
move-compiler.workspace = true
move-package.workspace = true
sui-config.workspace = true
sui-move-build.workspace = true
