[package]
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
name = "sui-genesis-builder"
publish = false
version = "0.0.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true

shared-crypto.workspace = true
sui-config.workspace = true
sui-execution.workspace = true
sui-framework.workspace = true
sui-framework-snapshot.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true
[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
sui-types = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
